<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/ed_uername"
        android:layout_width="match_parent"
        android:hint="@string/hint_Username"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/ed_password"
        android:layout_width="match_parent"
        android:hint="@string/hint_Password"
        android:inputType="textPassword"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_login"
        android:hint="@string/label_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_signup"
        android:hint="@string/label_signup_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>