<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/ed_Username"
        android:hint="@string/hint_Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/ed_password"
        android:hint="@string/hint_Password"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/ed_confirm_pwd"
        android:hint="@string/hint_conform_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_create_user"
        android:hint="@string/label_create_user_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>